--- a/app/views/mother_boards/index.html.erb
+++ b/app/views/mother_boards/index.html.erb
@@ -3,4 +3,4 @@
 <%= will_paginate @mother_boards %>
 <br />
 
-<%= link_to 'New mother_board', new_mother_board_path %>
+<%= link_to t('motherboards.new'), new_mother_board_path %>
