--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -1,9 +1,10 @@
 <% form_for(@cd) do |f| %>
   <%= f.error_messages %>
-  <%= f.label 'model' %>
+
+  <%= t('cds.model') %>
   <%= f.text_field :model %>
 
-  <%= f.label 'serialnumber' %>
+  <%= t('cds.sn') %>
   <%= f.text_field :serialnumber %>
 
   Burn <%= radio_button('cd', 'writable', 't') %>
@@ -17,9 +18,9 @@
       {:prompt => true} %>
   <p>
     <% if action_name == 'new' %>
-    <%= f.submit "Create" %>
+    <%= f.submit t('common-actions.create') %>
     <% else %>
-    <%= f.submit "Edit" %>
+    <%= f.submit t('common-actions.edit')  %>
     <% end %>
   </p>
 <% end %>
