--- a/app/views/dvds/_list.html.erb
+++ b/app/views/dvds/_list.html.erb
@@ -1,11 +1,11 @@
 <table>
   <tr>
-    <th>Model</th>
-    <th>Serial Number</th>
+    <th><%= t('dvds.model') %></th>
+    <th><%= t('dvds.sn') %></th>
     <th>Burn</th>
     <th>Pc</th>
-    <th>Mark</th>
-    <th colspan='3'>Actions</th>
+    <th><%= t('dvds.mark') %></th>
+    <th colspan='3'><%= t('common-actions.actions') %></th>
   </tr>
 <% for dvd in @dvds %>
   <tr  class="<%= cycle("rowA","rowB") %>">
@@ -14,9 +14,9 @@
     <td><%= dvd.writable %></td>
     <td><%= dvd.computer.name rescue nil  %></td>
     <td><%= dvd.mark.name rescue nil  %></td>
-    <td><%= link_to 'Show', dvd %></td>
-    <td><%= link_to 'Edit', edit_dvd_path(dvd) %></td>
-    <td><%= link_to 'Destroy', dvd, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to t('common-actions.show'), dvd %></td>
+    <td><%= link_to t('common-actions.edit'), edit_dvd_path(dvd) %></td>
+    <td><%= link_to t('common-actions.destroy'), dvd, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
