--- a/app/views/harddisks/_form.html.erb
+++ b/app/views/harddisks/_form.html.erb
@@ -1,10 +1,10 @@
 <% form_for(@harddisk) do |f| %>
   <%= f.error_messages %>
 
-  <%= f.label 'model' %>
+  <%= t('harddisks.model') %>
   <%= f.text_field :model %>
 
-  <%= f.label 'serialnumber' %>
+  <%= t('harddisks.sn') %>
   <%= f.text_field :serialnumber %>
 
   <%= collection_select 'harddisk', 'computer_id', Computer.find(:all), 'id', 'name',
@@ -14,9 +14,9 @@
       {:prompt => true} %>
   <p>
     <% if action_name == 'new' %>
-    <%= f.submit "Create" %>
+    <%= f.submit  t('common-actions.create') %>
     <% else %>
-    <%= f.submit "Edit" %>
+    <%= f.submit  t('common-actions.edit')  %>
     <% end %>
   </p>
 <% end %>
