--- a/app/views/mother_boards/_list.html.erb
+++ b/app/views/mother_boards/_list.html.erb
@@ -4,7 +4,7 @@
     <th><%= t('motherboards.sn') %></th>
     <th><%= t('motherboards.mark') %></th>
     <th>Pc</th>
-    <th colspan='3'>Actions</th>
+    <th colspan='3'><%= t('common-actions.actions') %></th>
   </tr>
 <% for mother_board in @mother_boards %>
   <tr  class="<%= cycle("rowA","rowB") %>">
@@ -12,9 +12,9 @@
     <td><%= mother_board.serialnumber %></td>
     <td><%= mother_board.mark.name rescue nil  %></td>
     <td><%= mother_board.computer.name rescue nil  %></td>
-    <td><%= link_to 'Show', mother_board %></td>
-    <td><%= link_to 'Edit', edit_mother_board_path(mother_board) %></td>
-    <td><%= link_to 'Destroy', mother_board, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to t('common-actions.show'), mother_board %></td>
+    <td><%= link_to t('common-actions.edit'), edit_mother_board_path(mother_board) %></td>
+    <td><%= link_to t('common-actions.destroy'), mother_board, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
