--- a/app/views/mother_boards/new.html.erb
+++ b/app/views/mother_boards/new.html.erb
@@ -1,3 +1,3 @@
 <%= render :partial => 'form' %>
 
-<%= link_to 'Back', mother_boards_path %>
+<%= link_to   t('motherboards.back'), mother_boards_path %>
