--- a/app/views/printers/_list.html.erb
+++ b/app/views/printers/_list.html.erb
@@ -1,11 +1,11 @@
 <table>
   <tr>
-    <th>Model</th>
-    <th>Serial Number</th>
-    <th>Mark</th>
+    <th><%= t('printers.model') %></th>
+    <th><%= t('printers.sn') %></th>
+    <th><%= t('printers.mark') %></th>
     <th>Place</th>
     <th>In workstation</th>
-    <th colspan='3'>Actions</th>
+    <th colspan='3'><%= t('common-actions.actions') %></th>
   </tr>
 <% for printer in @printers %>
   <tr  class="<%= cycle("rowA","rowB") %>">
@@ -14,9 +14,9 @@
     <td><%= printer.mark.name rescue nil  %></td>
     <td><%= printer.place.title rescue nil %></td>
     <td><%= printer.is_part_of_a_workstation rescue nil %></td>
-    <td><%= link_to 'Show', printer %></td>
-    <td><%= link_to 'Edit', edit_printer_path(printer) %></td>
-    <td><%= link_to 'Destroy', printer, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to t('common-actions.show'), printer %></td>
+    <td><%= link_to t('common-actions.edit'), edit_printer_path(printer) %></td>
+    <td><%= link_to t('common-actions.destroy'), printer, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
