--- a/app/views/screens/_list.html.erb
+++ b/app/views/screens/_list.html.erb
@@ -1,11 +1,11 @@
 <table>
   <tr>
-    <th>Model</th>
-    <th>Serial Number</th>
-    <th>Mark</th>
+    <th><%= t('screens.model') %></th>
+    <th><%= t('screens.sn') %></th>
+    <th><%= t('screens.mark') %></th>
     <th>Place</th>
     <th>In workstation</th>
-    <th colspan='3'>Actions</th>
+    <th colspan='3'><%= t('common-actions.actions') %></th>
   </tr>
 <% for screen in @screens %>
   <tr  class="<%= cycle("rowA","rowB") %>">
@@ -14,9 +14,9 @@
     <td><%= screen.mark.name rescue nil  %></td>
     <td><%= screen.place.title rescue nil %></td>
     <td><%= screen.is_part_of_a_workstation rescue nil %></td>
-    <td><%= link_to 'Show', screen %></td>
-    <td><%= link_to 'Edit', edit_screen_path(screen) %></td>
-    <td><%= link_to 'Destroy', screen, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to t('common-actions.show'), screen %></td>
+    <td><%= link_to t('common-actions.edit'), edit_screen_path(screen) %></td>
+    <td><%= link_to t('common-actions.destroy'), screen, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
