--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -11,7 +11,7 @@
     <th>Dvd</th>
     <th><%= t 'computers.place' %></th>
     <th><%= t 'computers.workstation?' %></th>
-    <th colspan='3'><%= t 'computers.action' %></th>
+    <th colspan='3'><%= t 'common-actions.actions' %></th>
   </tr>
 <% for computer in @computers %>
   <tr  class="<%= cycle("rowA","rowB") %>">
@@ -26,9 +26,9 @@
     <td><%= computer.dvd.collect {|x| x.model + '<br>' } rescue nil %></td>
     <td><%= computer.place.title rescue nil %></td>
     <td><%= computer.is_part_of_a_workstation rescue nil %></td>
-    <td><%= link_to t('computers.show') , computer %></td>
-    <td><%= link_to t('computers.edit') , edit_computer_path(computer) %></td>
-    <td><%= link_to t('computers.destroy') , computer, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to t('common-actions.show') , computer %></td>
+    <td><%= link_to t('common-actions.edit') , edit_computer_path(computer) %></td>
+    <td><%= link_to t('common-actions.destroy') , computer, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
