--- a/app/views/workstations/_list.html.erb
+++ b/app/views/workstations/_list.html.erb
@@ -14,7 +14,7 @@
     <td><%= @c rescue nil  %></td>
     <td><%= @s rescue nil  %></td>
     <td><%= @p rescue nil  %></td>
-    <td><%= link_to t('workstations.destroy'), workstation, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to t('common-actions.destroy'), workstation, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
   <% end %>
 </table>
