- Translation   * added translation in some views

--- a/app/views/computers/unavailable.html.erb
+++ b/app/views/computers/unavailable.html.erb
@@ -3,4 +3,4 @@
 <%= will_paginate @computers %>
 <br />
 
-<%= link_to 'New computer', new_computer_path %>
+<%= link_to t('computers.new'), new_computer_path %>
