--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -365,7 +365,7 @@ div.auto_complete ul strong.highlight {
     border-top: solid 1px #BBBBBB;
     border-left: solid 1px #000000;
     border-right: solid 1px #DDD;
-    border-bottom: solid 1px #000000;
+    border-bottom: solid 1px #DDD;
 }
 
 
