- Controllers   * added new methods in application controller to calculate     stats google chart data   * adapted computers and places stats methods
- Views and Partials
  * added new translations in partials and views

- Locales
  * added new locales translations

- Specs
  * little changes in specs

--- a/app/views/marks/_form.html.erb
+++ b/app/views/marks/_form.html.erb
@@ -1,13 +1,13 @@
 <% form_for(@mark) do |f| %>
   <%= f.error_messages %>
 
-  <%= f.label 'name' %>
+  <%= t('marks.mark') %>
   <%= f.text_field :name %>
   <p>
     <% if action_name == 'new' %>
-    <%= f.submit "Create" %>
+    <%= f.submit t('marks.create') %>
     <% else %>
-    <%= f.submit "Edit" %>
+    <%= f.submit t('marks.edit') %>
     <% end %>
   </p>
 <% end %>
