--- a/app/views/marks/_list.html.erb
+++ b/app/views/marks/_list.html.erb
@@ -1,6 +1,6 @@
 <table>
   <tr>
-    <th>Name</th>
+    <th><%= t('marks.mark') %></th>
     <th colspan='3'><%= t('common-actions.actions') %></th>
   </tr>
 <% for mark in @marks %>
