--- a/app/views/marks/edit.html.erb
+++ b/app/views/marks/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render :partial => 'form' %>
 
-<%= link_to 'Show', @mark %> |
-<%= link_to 'Back', marks_path %>
+<%= link_to t('marks.show'), @mark %> |
+<%= link_to t('marks.back'), marks_path %>
