--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -39,6 +39,7 @@
       <ul class="sub">
         <li><a href="/computers"  class="fly"><%= t 'menu.computers' %></a>
           <ul>
+            <li><a href="/computers"  class="fly"><%= t 'menu.list-computers' %></a>
             <li><a href="/computers/available"><%= t 'menu.availables-computers' %></a></li>
             <li><a href="/computers/unavailable"><%= t 'menu.unavailables-computers' %></a></li>
             <li><a href="/computers/new"><%= t 'menu.new-computer' %></a></li>
