--- a/app/views/marks/show.html.erb
+++ b/app/views/marks/show.html.erb
@@ -1,3 +1,3 @@
 
-<%= link_to 'Edit', edit_mark_path(@mark) %> |
-<%= link_to 'Back', marks_path %>
+<%= link_to t('marks.edit'), edit_mark_path(@mark) %> |
+<%= link_to t('marks.back'), marks_path %>
