--- a/app/views/workstations/new.html.erb
+++ b/app/views/workstations/new.html.erb
@@ -1,7 +1,10 @@
+<div id='stats_data'>
 <%= render :partial => 'form' %>
 
 <%= observe_field("places", :update => "outer",
 :url => { :controller => 'workstations', :action => :new },
 :with => "'place_id='+value") %>
 
+</div>
 <%= link_to t('workstations.back'), workstations_path %>
+
