- Partials and Views   * refactoring and addition of toggle effect

--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -1,19 +1,25 @@
-<h2><%= @text %></h2>
-<table>
-  <tr>
-    <th><%= t('places.name') %></th>
-    <th><%= t('places.description') %></th>
-    <th><%= t('places.computer') %></th>
-    <th colspan='3'><%= t('common-actions.actions') %></th>
-  </tr>
-<% for place in @places %>
-  <tr  class="<%= cycle("rowA","rowB") %>">
-    <td><%= link_to place.title, place %></td>
-    <td><%= place.description %></td>
-    <td><%= place.computer.count %></td>
-    <td><%= link_to t('common-actions.show'), place %></td>
-    <td><%= link_to t('common-actions.edit'), edit_place_path(place) %></td>
-    <td><%= link_to t('common-actions.destroy'), place, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+<a href="#" onclick="Effect.toggle('toggle_appear_table_list_places', 'appear'); return false;">
+  Mostrar/ocultar tabla de lugares</a>
+<div id='toggle_appear_table_list_places' style='background:#eee;' >
+  <div>
+    <h2><%= @text %></h2>
+    <table>
+      <tr>
+        <th><%= t('places.name') %></th>
+        <th><%= t('places.description') %></th>
+        <th><%= t('places.computer') %></th>
+        <th colspan='3'><%= t('common-actions.actions') %></th>
+      </tr>
+      <% for place in @places %>
+      <tr  class="<%= cycle("rowA","rowB") %>">
+        <td><%= link_to place.title, place %></td>
+        <td><%= place.description %></td>
+        <td><%= place.computer.count %></td>
+        <td><%= link_to t('common-actions.show'), place %></td>
+        <td><%= link_to t('common-actions.edit'), edit_place_path(place) %></td>
+        <td><%= link_to t('common-actions.destroy'), place, :confirm => 'Are you sure?', :method => :delete %></td>
+      </tr>
+      <% end %>
+    </table>
+  </div>
+</div>
