--- a/app/views/places/stats.html.erb
+++ b/app/views/places/stats.html.erb
@@ -1,29 +1,35 @@
 <% cache(:fragment => "places/_stats") do %>
-<%= t('places.graphic_stats_in_numbers') %>
 
-<div id='stats_data'>
-  <%= link_to  t('places.all'), :controller => "places", :action => "index" %>
-  <%=
-     Place.rooms.count + Place.rooms.count +
-     Place.departments.count + Place.stores.count \
-     rescue nil
-     %>
+<a href="#" onclick="Effect.toggle('toggle_appear_table_list_places', 'appear'); return false;">
+  Mostrar/ocultar tabla de lugares</a>
+<div id='toggle_appear_table_list_places' style='border: solid 1px #eee;'  >
+  <div>
 
-</div>
+    <%= t('places.graphic_stats_in_numbers') %>
 
-<div id='stats_data'>
-  <%= t('places.rooms') %>
-  <%= Place.rooms.count %>
-</div>
+    <div id='stats_data'>
+      <%= link_to  t('places.all'), :controller => "places", :action => "index" %>
+      <%=
+         Place.rooms.count + Place.rooms.count +
+         Place.departments.count + Place.stores.count \
+         rescue nil
+         %>
 
-<div id='stats_data'>
-  <%= t('places.departments') %>
-  <%= Place.departments.count %>
-</div>
+    </div>
 
-<div id='stats_data'>
-  <%= t('places.offices') %>
-  <%= Place.offices.count %>
+    <div id='stats_data'>
+      <%= t('places.rooms') %>
+      <%= Place.rooms.count %>
+    </div>
+
+    <div id='stats_data'>
+      <%= t('places.departments') %>
+      <%= Place.departments.count %>
+    </div>
+
+    <div id='stats_data'>
+      <%= t('places.offices') %>
+      <%= Place.offices.count %>
 </div
 
 <div id='stats_data'>
@@ -31,11 +37,22 @@
   <%= Place.stores.count %>
 </div>
 
-<br>
-<%= t('places.graphic_stats_paragraph') %>
+</div>
+</div>
 
-<br>
-<%  @value = GoogleChart.pie_3d_530x200(@chart).to_url %>
-<%= image_tag(@value)  rescue nil %>
 
+  <a href="#" onclick="Effect.toggle('toggle_appear_pie_3d_graph', 'appear'); return false;">
+    Mostrar/ocultar grafico estadistico</a>
+  <div id='toggle_appear_pie_3d_graph' style='border: solid 1px #eee;' >
+    <div>
+      <br>
+      <%= t('places.graphic_stats_paragraph') %>
+
+      <br>
+      <%  @value = GoogleChart.pie_3d_530x200(@chart).to_url %>
+      <%= image_tag(@value)  rescue nil %>
+
+    </div>
+  </div>
 <% end %>
+
