--- a/app/views/shared/_new_menu.html.erb
+++ b/app/views/shared/_new_menu.html.erb
@@ -15,6 +15,7 @@
         <ul class="sub">
           <li><a href="/workstations"><%= t 'menu.list-workstations' %></a></li>
           <li><a href="/workstations/new"><%= t 'menu.new' %></a></li>
+          <li><a href="/workstations/stats"><%= t 'menu.stats-workstations' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
